<resources>
    <string name="app_name">家居装修社区</string>
    <string name="home">主页</string>
    <string name="social">社交</string>
    <string name="me">我</string>
    <string name="action_settings">Settings</string>
    <string name="location">位置</string>
    <string name="add">添加</string>
    <string name="search">搜索</string>
    <string name="example">装修案例</string>
    <string name="consult">在线咨询</string>
    <string name="company">装修公司</string>
    <string name="evaluate">房屋估价</string>
    <string name="store">家居商店</string>
    <string name="inspect">装修质检</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello">家居装修社区app欢迎你</string>
    <string name="login">用户登录</string>
    <string name="register">用户注册</string>
    <string name="smssdk_default_country">中国</string>
    <string name="smssdk_get_code">获取验证码</string>
    <string name="smssdk_verify">验证</string>
</resources>
