<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/HomeLayout">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">
        <LinearLayout
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <ImageView
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerHorizontal="true"
                    android:padding="15dp"
                    android:scaleType="fitXY"
                    android:scaleX="1.1"
                    android:scaleY="1.1"
                    android:src="@drawable/location"
                    android:tag="@string/location" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <ImageView
                    android:id="@+id/search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:padding="15dp"
                    android:scaleType="fitXY"
                    android:scaleX="1.1"
                    android:scaleY="1.1"
                    android:src="@drawable/search"
                    android:tag="@string/search" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/addRelativeLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
                <ImageView
                    android:id="@+id/add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:padding="15dp"
                    android:scaleType="fitXY"
                    android:scaleX="1.1"
                    android:scaleY="1.1"
                    android:src="@drawable/add"
                    android:tag="@string/add" />
            </RelativeLayout>
        </LinearLayout>>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:orientation="horizontal">
            <Button
                android:id="@+id/rmButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:text="热门"
                android:textSize="20dp"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/gzButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:text="关注"
                android:textSize="20dp"
                android:textColor="@color/nichengcolor"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/xian"
            android:layout_width="fill_parent"
            android:background="@color/white"
            android:orientation="horizontal"
            android:layout_height="3dp">
            <ImageView
                android:id="@+id/biaoqian"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                >
            </ImageView>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"/>

        <android.support.v4.view.ViewPager
            android:id="@+id/myviewpager"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="12">
        </android.support.v4.view.ViewPager>
    </LinearLayout>
</FrameLayout>